--- a/ethwallpaper/frontend/package.json
+++ b/ethwallpaper/frontend/package.json
@@ -41,6 +41,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.3",
+    "react-id-swiper": "^1.5.7",
     "react-meta-tags": "^0.3.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
