--- a/ethwallpaper/frontend/package.json
+++ b/ethwallpaper/frontend/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.4.0",
