--- a/admin-tool/package.json
+++ b/admin-tool/package.json
@@ -13,9 +13,9 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.3",
-    "gatsby-plugin-material-ui": "^2.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "reactstrap": "^8.4.1",
     "typeface-merriweather": "^0.0.72",
     "typeface-montserrat": "^0.0.75",
     "typography": "^0.16.19",
@@ -24,7 +24,6 @@
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
-    "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
